--- a/RedBlack-demo/index.html
+++ b/RedBlack-demo/index.html
@@ -227,7 +227,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item position-relative rounded shadow">
+            <div class="service-item position-relative  shadow">
               <div class="icon">
                 <img src="assets/img/icons/ice-skating-people.png" alt="">
               </div>
@@ -240,7 +240,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item position-relative rounded shadow">
+            <div class="service-item position-relative shadow">
               <div class="icon">
                 <img src="assets/img/icons/ice-skating.png" alt="">
               </div>
@@ -253,7 +253,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item position-relative rounded shadow">
+            <div class="service-item position-relative shadow">
               <div class="icon">
                 <img src="assets/img/icons/hockey-field.png" alt="">
               </div>
@@ -266,7 +266,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-item position-relative rounded shadow">
+            <div class="service-item position-relative shadow">
               <div class="icon">
                 <img src="assets/img/icons/birthday-cake.png" alt="">
               </div>
@@ -280,7 +280,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="service-item position-relative rounded shadow">
+            <div class="service-item position-relative shadow">
               <div class="icon">
                 <img src="assets/img/icons/hockey-sticks.png" alt="">
               </div>
@@ -294,7 +294,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
-            <div class="service-item position-relative rounded shadow">
+            <div class="service-item position-relative shadow">
               <div class="icon">
                 <img src="assets/img/icons/group.png" alt="">
               </div>
